--- a/glTFLoader/glTFLoader.csproj
+++ b/glTFLoader/glTFLoader.csproj
@@ -15,10 +15,20 @@
     <PackageIconUrl>https://github.com/KhronosGroup/glTF/blob/master/specification/figures/gltf.png</PackageIconUrl>
     <PackageTags>glTF loader C#</PackageTags>
     <Version>1.1.1-alpha</Version>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netstandard1.3|AnyCPU'">
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>  
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+  </ItemGroup>  
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard1.3'">
+    <PackageReference Include="System.Memory">
+      <Version>4.5.0-preview2-26313-03</Version>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
