Project can now be build with MSBuild (had to remove support for .netstandard, just upgraded all projects to .NET 4.7.1)

--- a/glTFLoader/glTFLoader.csproj
+++ b/glTFLoader/glTFLoader.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard1.3;net35</TargetFrameworks>
+    <TargetFramework>net471</TargetFramework>
     <Authors>Khronos Group</Authors>
     <Copyright></Copyright>
     <Description>C# reference loader for glTF 2.0</Description>
